--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Touch Distance - GIF Interaction</title>
+    <title>Hearts Spawn on Tap</title>
     
     <style>
         body {
             margin: 0;
             padding: 0;
             overflow: hidden;
-            touch-action: none;
         }
     </style>
     
